# dokonpro_backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  constants.py  database.py  deps.py  enums.py  exceptions.py  rate_limit.py  responses.py  security.py
app/integrations/: sms.py
app/models/: __init__.py  category.py  debt.py  expense.py  payment.py  product.py  purchase.py  sale.py  stock_movement.py  store.py  store_staff.py  subscription.py  supplier.py  user.py
app/utils/: pagination.py  phone.py  slug.py  subscription.py
migrations/: README  env.py
migrations/versions/: 20260628_0001_initial_schema.py  20260628_0002_auth_phone_only.py  20260629_0003_inventory_expiry_and_store_slug.py  20260629_0004_sales_idempotency.py  20260629_0005_sales_snapshot_and_accountant.py  20260630_0006_suppliers_purchases_expenses_staff.py
tests/: conftest.py  test_health.py
tests/unit/: test_auth_deps.py  test_auth_otp.py  test_auth_router.py  test_auth_service.py  test_config.py  test_dashboard_settings_router.py  test_database.py  test_debts_router.py  test_debts_schemas.py  test_debts_service.py  test_exceptions.py  test_models.py  test_pagination.py  test_products_router.py  test_products_schemas.py  test_products_service.py  test_reports_service.py  test_sales_router.py  test_sales_schemas.py  test_sales_service.py  test_security.py  test_settings_service.py  test_slug.py  test_sms_provider.py  test_stores_service.py  test_stores_subscriptions_reports_router.py  test_subscriptions_service.py
(+50 files in other folders)
